# autotriage-soar-dashboard

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TEST_PLAN.md  TEST_REPORT.md
autotriage/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
autotriage/.github/workflows/: ci.yml
autotriage/autotriage/: __init__.py  config.py  logging.py  worker.py
autotriage/autotriage/app/: main.py
autotriage/autotriage/cli/: main.py
autotriage/autotriage/connectors/: base.py  mock_siem.py  mock_ticketing.py
autotriage/autotriage/enrichers/: allowlist.py  asset_context.py  base.py  cache.py  geo_asn.py  ip_reputation.py  manager.py  rate_limit.py  whois.py
autotriage/autotriage/metrics/: experiments.py  prom.py  reporter.py
autotriage/autotriage/playbooks/: README.md  catalog.py
autotriage/autotriage/rules/: routing.yml  scoring.yml  thresholds.yml
autotriage/autotriage/storage/: db.py
autotriage/autotriage/tools/: alert_generator.py  dashboard_smoke.py  load_test.py  perf_run.py  seed_data.py  smoke.py
autotriage/autotriage/util/: env.py
autotriage/data/: allowlists.yml  asset_inventory.csv  mock_geoasn.csv  mock_reputation.csv  mock_whois.csv
autotriage/data/sample_alerts/: vendor_a.jsonl  vendor_b.jsonl  vendor_c.jsonl
autotriage/docker/: Dockerfile  compose.yml
autotriage/docs/: architecture.md  overview.md  runbook.md  threat-model.md  tuning.md
autotriage/docs/diagrams/: architecture.mmd  dashboard.mmd  (+2 more)
autotriage/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+97 files in other folders)
